--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Github Profiles</title>
   </head>
   <body>
-    <form class="user-form" id="form">
+    <form class="user-form" id="form" type="submit">
       <input type="text" id="search" placeholder="Search a Github User">
     </form>
 
